# resume-builder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  start-dev.ps1
.github/workflows/: ci.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/models/: __init__.py  certification.py  education.py  experience.py  profile.py  resume.py
backend/app/routers/: certifications.py  education.py  experience.py  profile.py  resume.py
backend/app/schemas/: certification.py  education.py  experience.py  profile.py  resume.py
backend/app/services/: job_parser.py  llm.py  resume_generator.py
backend/app/templates/: resume.html.j2
backend/tests/contract/: test_crud_contracts.py  test_profile_contracts.py
backend/tests/integration/: test_profile.py  test_resume_generation.py  test_resume_history.py
backend/tests/unit/: test_job_parser.py  test_llm_service.py  test_profile_routers.py  test_resume_generator.py  test_router_handlers.py
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: check-bundle-size.mjs
frontend/src/: App.vue
frontend/tests/: setup.ts  vitest-axe.d.ts
specs/001-ai-resume-builder/: data-model.md  plan.md  (+4 more)
(+21 files in other folders)
